--- a/src/styles/desktop-styles.css
+++ b/src/styles/desktop-styles.css
@@ -101,11 +101,11 @@
   }
   /* hero animation starts here*/
   
-  .hero-container h1{ opacity: 0; transform: translateX(-100%); transition:  500ms all 0ms;}
-  .hero-container p{ opacity: 0; transform: translateX(-100%); transition:  700ms all 0ms;}
-  .hero-container .hero-list-first{ opacity: 0; transform: translateX(-100%); transition:  900ms all 0ms;}
-  .hero-container .hero-list-second{ opacity: 0; transform: translateX(-100%); transition:  1000ms all 0ms;}
-  .hero-container .hero-list-third{ opacity: 0; transform: translateX(-100%); transition:  1100ms all 0ms;}
+  .hero-container h1{ opacity: 1; transform: translateX(0); transition:  500ms all 0ms;}
+  .hero-container p{ opacity: 1; transform: translateX(0); transition:  700ms all 0ms;}
+  .hero-container .hero-list-first{ opacity: 1; transform: translateX(0); transition:  900ms all 0ms;}
+  .hero-container .hero-list-second{ opacity: 1; transform: translateX(0); transition:  1000ms all 0ms;}
+  .hero-container .hero-list-third{ opacity: 1; transform: translateX(0); transition:  1100ms all 0ms;}
 
   /* hero animation ends here*/
 
@@ -128,8 +128,8 @@
     width: 200px;
     margin: 0 0 ;
     padding: 4px;
-    opacity: 0;
-    transition: 300ms opacity 1200ms;
+    opacity: 1;
+    /* transition: 300ms opacity 1200ms; */
   }
   .hero-container h1{
     font-size: var(--h1-font-size);
@@ -222,8 +222,8 @@ footer{
 /* Intersection styles */
 
 .contact-container, .service-container{
-    opacity: 0;
-    transform: translateX(-80%);
+    opacity: 1;
+    transform: translateX(0);
     }
 
 
@@ -267,7 +267,7 @@ footer{
     .card::after{
       content: '(Click to Reveal)';
       color: rgba(255, 255, 255, 0.4);
-      opacity: 0;
+      opacity: 1;
       text-align: center;
       position: absolute;
       width: 100%;
