--- a/src/styles/mobileStyles.css
+++ b/src/styles/mobileStyles.css
@@ -103,7 +103,7 @@
       padding-bottom: 50px;
       background-color: transparent;
       backdrop-filter: var(--hero-backdrop-filter);
-      opacity: 0;
+      opacity: 1;
       transition: 700ms all;
       transform: translateY(10%);
     }
@@ -180,8 +180,8 @@
     /* Intersection styles */
   
     .contact-container, .service-container{
-    opacity: 0;
-    transform: translateX(-80%);
+    opacity: 1;
+    transform: translateX(0);
     }
   
     /* Intersection styles ends here */
@@ -224,8 +224,8 @@
         gap: 16px;
         min-height: 400px;
         justify-content: space-around;
-        transform: translateX(-80%);
-        opacity: 0;
+        transform: translateX(0);
+        opacity: 1;
     }
     .client-logo:first-child{
         width: calc(100vw - 32px);
