--- a/src/styles/tablet-styles.css
+++ b/src/styles/tablet-styles.css
@@ -46,7 +46,7 @@
   .hero-section .hero-cta{
     width: 200px;
     margin: 0;
-    opacity: 0;
+    opacity: 1;
     transition: 300ms opacity 1200ms;
   }
   .hero-container h1{
@@ -55,11 +55,11 @@
 
   /* hero animation starts here*/
   
-  .hero-container h1{ opacity: 0; transform: translateX(-100%); transition:  500ms all 0ms;}
-  .hero-container p{ opacity: 0; transform: translateX(-100%); transition:  700ms all 0ms;}
-  .hero-container .hero-list-first{ opacity: 0; transform: translateX(-100%); transition:  900ms all 0ms;}
-  .hero-container .hero-list-second{ opacity: 0; transform: translateX(-100%); transition:  1000ms all 0ms;}
-  .hero-container .hero-list-third{ opacity: 0; transform: translateX(-100%); transition:  1100ms all 0ms;}
+  .hero-container h1{ opacity: 1; transform: translateX(0); transition:  500ms all 0ms;}
+  .hero-container p{ opacity: 1; transform: translateX(0); transition:  700ms all 0ms;}
+  .hero-container .hero-list-first{ opacity: 1; transform: translateX(0); transition:  900ms all 0ms;}
+  .hero-container .hero-list-second{ opacity: 1; transform: translateX(0); transition:  1000ms all 0ms;}
+  .hero-container .hero-list-third{ opacity: 1; transform: translateX(0); transition:  1100ms all 0ms;}
 
   /* hero animation ends here*/
   
@@ -186,8 +186,8 @@ section.contact-section .contact-container{
 /* Intersection styles */
 
 .contact-container, .service-container{
-    opacity: 0;
-    transform: translateX(-80%);
+    opacity: 1;
+    transform: translateX(0);
     }
 
 
