--- a/src/styles/baseStyles.css
+++ b/src/styles/baseStyles.css
@@ -242,7 +242,7 @@ footer .footer-heading{
   }
 
   .wcu-card ul{
-      list-style-image: url('assets/checkmark.svg');
+      list-style-image: url('./src/assets/checkmark.svg');
       list-style-position: outside;
   }
   .wcu-card li{
@@ -335,3 +335,7 @@ footer .footer-heading{
   
 
   /* Common styles for our clients section ends here*/
+
+  .card-face.card-back a{
+    color: white;
+  }
