--- a/src/styles/desktop-styles.css
+++ b/src/styles/desktop-styles.css
@@ -8,6 +8,9 @@
     background-color: transparent;
     height: 55px;
   }
+  header .button-container{
+    display: initial;
+  }
   .logo-group{
     display: flex;
     flex-flow: row nowrap;
