--- a/src/styles/baseStyles.css
+++ b/src/styles/baseStyles.css
@@ -245,7 +245,7 @@ footer .footer-heading{
   }
 
   .wcu-card ul{
-      list-style-image: url('./src/assets/checkmark.svg');
+      list-style-image: url('src/assets/checkmark.svg');
       list-style-position: outside;
   }
   .wcu-card li{
