--- a/src/styles/baseStyles.css
+++ b/src/styles/baseStyles.css
@@ -40,6 +40,7 @@
     width: 100%;
     height: 100%;
     background-color: var(--dark-theme-background-color);
+    scroll-behavior: smooth;
   }
   body{
     color: var(--body-text-color);
