adding card hover styles

--- a/src/styles/desktop-styles.css
+++ b/src/styles/desktop-styles.css
@@ -264,6 +264,9 @@ footer{
     .flip{
       transform: rotateY(180deg);
     }
+    .card-mouseenter{
+      border-width: 3px;
+    }
     .wcu-card:hover .card::after{
       opacity: 1;
     }
