--- a/src/styles/baseStyles.css
+++ b/src/styles/baseStyles.css
@@ -269,7 +269,7 @@ footer .footer-heading{
     -webkit-transform-style: preserve-3d;
     -o-transform-style: preserve-3d;
     -ms-transform-style: preserve-3d;
-    transition: transform 0.6s;
+    transition: transform 0.6s, border-width 500ms;
     cursor: pointer;
     width: 100%;
     height: 100%;
