--- a/src/styles/baseStyles.css
+++ b/src/styles/baseStyles.css
@@ -1,349 +1,45 @@
-:root{
-    --blue: #1E90FF;
-    --dark-blue: #003E7A;
-    --white: #ffffff;
-    --hero-section-bg-color: #142438;
-    --logo-text-font-size-mobile: 20px;
-    --logo-text-font-family: "gruppo", sans-serif;
-    --body-text: "Nunito", "Montserrat";
-    --body-font-size:14px;
-    --h1-font-size-mobile: 32px;
-    --h2-font-size-mobile: 28px;
-    --h3-font-size-mobile: 24px;
-    --h1-font-size: 32px;
-    --h2-font-size: 28px;
-    --h3-font-size: 24px;
-    --body-text-color: white;
-    --dark-theme-background-color: #05060F;
-    --hero-backdrop-filter: blur(6px);
-    --hero-backdrop-color: hsl(210, 100%, 56%);
-    --hero-backdrop-color-mobile: hsl(210, 80%, 30%);
-    --blob: radial-gradient(farthest-side at 50% 100%, var(--hero-backdrop-color-mobile)40px, transparent 86%);
-    --blob-tablet: radial-gradient(farthest-side at -60% 70%, var(--hero-backdrop-color)40px, transparent);
-    --blob-desktop: radial-gradient(farthest-side at 80% 120%, var(--hero-backdrop-color) 4%, transparent 100%);
-    --footer-top-border: #05060F;
-    --bg-color-cta: hsl(210, 100%, 45%);
-    --corel-red: hsl(14, 100%, 35%);
-    --font-size-cta: 17px;
-  }
-  *, *::before, *::after{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    list-style-type: none;
-    line-height: 20px;
-  }
-  h1, h2, h3, h4{
-      line-height: initial;
-  }
-  html{
-    width: 100%;
-    height: 100%;
-    background-color: var(--dark-theme-background-color);
-    scroll-behavior: smooth;
-  }
-  body{
-    color: var(--body-text-color);
-    font-size: 18px;
-    font-family: 'Gruppo', sans-serif;
-  }
-  /* Common design for navigation menu */
-  .nav-menu a{
+nav a {
     text-decoration: none;
-    color: var(--body-text-color);
-    font-size:var(--logo-text-font-size-mobile);
-  }
-  .logo-group{
-    display: flex;
-    flex-flow: row nowrap;
-    align-items: center;
-  }
-  header a {
-    text-decoration: none;
-    color: var(--body-text-color);
-    font-size:var(--logo-text-font-size-mobile);
-  }
-  header .button-container{
-    display: none;
-  }
-  .hero-section ul{
-    list-style-image: url('/src/assets/checkmark.svg');
-    list-style-position: inside;
-  }
-  .hero-section .hero-cta{
-    color: var(--white);
-    border: none;
-    font-family: var(--font-size-cta);
-    border-radius: 0 15px 0 15px;
-    cursor: pointer;
-    margin: 0;
-    font-size: var(--font-size-cta);
-    background-color: var(--bg-color-cta);
+}
+nav a, nav a:visited, nav a:active {
+    color: black;
+}
+body{
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 0.9rem;
+}
+h1{
+    padding: 0 0 8px 0;
+}
+
+h2{
     padding: 8px 0;
-  }
-
-/*     Common Styles for Services Section Start */
-  .services-heading {
-    font-size: var(--h1-font-size-mobile);
-    padding: 32px 0;
-    text-align: center;
-    padding: 68px 0;
-    text-align: center;
-  }
-  .service-container{
-    background-color: transparent;
-    min-height: 60vh;
-    display: flex;
-    flex-flow: column nowrap;
-    align-items: center;
-    position: relative;
-  }
-  .services h3{
-    text-align: center;
-    padding: 16px 0;
-  }
-  .service-container > h3.service-heading {
-    padding: 38px 0;
-    font-size: var(--h2-font-size-mobile);
-  }
-  .service-items h3{
-    font-family: var(--body-text);
-    font-weight: normal;
-    font-size: var(--body-font-size);
-    text-align: left;
-  }
-
-/*     Common Styles for Services Section End */
-
-/*     Services styles start here      */
-
-
-  .service-container .service-heading::before{
-    content: "";
-    width: 90%;
-    height: 2px;
-    position: absolute;
-    background-color: rgb(30, 143, 255);
-    top: 0;
-    left: 50%;
-    transform: translateX(-50%);
-    border: 1px solid rgb(30, 143, 255);
-    border-radius: 0 0 20px 20px;
-  }
-
-
-
-/*     Services styles End here */
-/* Common Footer section styles  starts here */
-footer{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-footer .footer-heading{
-  font-size: var(--body-font-size);
-  text-align: center;
 }
 
-  /* Common Footer section styles ends here */
+p{
+    padding: 8px 0;
+}
 
-  /* Common contact us section styles ends here */
-
-  .contact-section{
-      display: flex;
-      flex-flow: column nowrap;
-      gap: 100px;
-  }
-  .contact-section .contact-heading{
-      text-align: center;
-      font-size: var(--h1-font-size);
-      width: 100%;
-  }
-  .contact-section .contact-container{
-      width: calc(100vw - 32px);
-      display: flex;
-      flex-flow: column nowrap;
-      gap: 50px;
-  }
-  .contact-button-container{
-      display: flex;
-      flex-flow: column nowrap;
-      justify-content: space-evenly;
-      width: 100%;
-      gap: 25px;
-  }
-  .contact-section p{
-      text-align: center;
-      font-family: var(--body-text);
-      font-size: var(--body-font-size);
-  }
-  .contact-banner{
-      background-color: inherit;
-      color: white;
-      display: flex;
-      justify-content: flex-start;
-      gap: 10px;
-      font-size: var(--body-font-size);
-      align-items: center;
-      padding: 8px 16px;
-      font-family: var(--body-text);
-      align-self: center;
-      cursor: pointer;
-      border: 2px solid rgba(30, 143, 255, 0.5);
-  }
-
-  .hero-text{
-      font-family: var(--body-text);
-      font-size: var(--body-font-size);
-  }
-  /* section.contact-section button:first-child{
-      border-radius: 0 15px;
-  }
-  section.contact-section button:last-child{
-      border-radius: 15px 0;
-  } */
-  /* Common contact us section styles ends here */
-
-  /* Common styles for wcu section starts here*/
-
-
-  .why-choose-us-section{
-      font-family: var(--body-text);
-      font-size: var(--body-font-size);
-  }
-  .why-choose-us-section h2{
-      font-family: var(--logo-text-font-family);
-      text-align: center;
-      font-size: var(--h1-font-size);
-  }
-  .why-choose-us-section .wcu-cards-list{
-      display: flex;
-      justify-content: center;
-      width: 100vw;
-  }
-  .wcu-card h3{
-      text-align: center;
-      font-family: var(--logo-text-font-family);
-      font-size: var(--h2-font-size);
-      text-decoration: 1px underline;
-      text-underline-offset: 3px;
-  }
-  /* .wcu-card p{
-      height: 96px;
-  } */
-  .wcu-card{
-      display: flex;
-      flex-flow: column nowrap;
-      justify-content: center;
-      gap: 50px;
-      align-items: center;
-  }
-
-  @-moz-document url-prefix() {
-    /* Fix for Firefox backface-visibility issue */
-    .card-back {
-      transform: rotateY(180deg) translateZ(1px);
-    }
-    .card-front {
-      transform: rotateY(0) translateZ(0);
-    }
-  }
-
-  .wcu-card ul{
-      list-style-image: url('/src/assets/checkmark.svg');
-      list-style-position: outside;
-  }
-  .wcu-card li{
-      padding: 4px 0;
-  }
-
-   .card-container {
-    perspective: 1000px;
-    overflow: visible;
-  }
-
-  .card {
-    position: relative;
-    transform-style: preserve-3d;
-    -moz-transform-style: preserve-3d;
-    -webkit-transform-style: preserve-3d;
-    -o-transform-style: preserve-3d;
-    -ms-transform-style: preserve-3d;
-    transition: transform 0.6s, border-width 500ms;
-    cursor: pointer;
-    width: 100%;
-    height: 100%;
-    border: 1px solid rgba(30, 143, 255, 0.499);
-    border-radius: 20px;
-    overflow: visible;
-  }
-  .card-face {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    backface-visibility: hidden;
-    -webkit-backface-visibility: hidden;
-    -o-backface-visibility: hidden;
-    -moz-backface-visibility: hidden;
-    -ms-backface-visibility: hidden;
-    display: flex;
-    flex-flow: column nowrap;
-    align-items: center;
-    justify-content: center;
-    top: 0;
-    left: 0;
-  }
-
-  .card-back{
-    transform: rotateY(180deg);
-  }
-  .card-back ul{
-    padding: 0 16px 0 40px;
-  }
-
-  /* Common styles for wcu section ends here*/
-
-  /* Common styles for our clients section starts here*/
-
-
-  .our-clients{
-      display: flex;
-      flex-flow: column nowrap;
-      justify-content: space-evenly;
-      align-items: center;
-      width: 100vw;
-      min-height: 370px;
-      height: 50vh;
-  }
-  .our-clients-heading{
-      font-size: var(--h1-font-size);
-      padding: 68px 0;
-  }
-  .logos-container{
-      /* border: 1px solid red; */
-      display: flex;
-      justify-content: space-evenly;
-      align-items: center;
-      overflow: hidden;
-      width: 100%;
-      padding: 0 16px;
-      flex-flow: row nowrap;
-      gap: 150px;
-      height: 200px;
-  }
-  .client-logo{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  .white-bg{
-      background-color: white;
-      border-radius: 10px;
-  }
-  
-
-  /* Common styles for our clients section ends here*/
-
-  .card-face.card-back a{
+/* light-theme values */
+.light-theme{
+    background-color: skyblue;
+}
+.dark-theme{
+    background-color: gray;
     color: white;
-  }
+}
+
+.light-theme nav a{
+    background-color: skyblue;
+    color: black;
+}
+.dark-theme nav a{
+    background-color: gray;
+    color: white;
+}
+
+.theme-button{
+    width: 100px;
+    border-radius: 5px;
+    cursor: pointer;
+}
